@@ -45,28 +45,28 @@ class MCPSessionManagerTest {
     
     @Test
     void assertCreateSession() {
-        assertDoesNotThrow(() -> new MCPSessionManager(Collections.emptyMap()).createSession("session-1"));
+        assertDoesNotThrow(() -> new MCPSessionManager(Collections.emptyMap()).createSession(new MCPSessionIdentity("session-1", "", "", Map.of())));
     }
     
     @Test
     void assertCreateSessionWithDuplicateSessionId() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
-        IllegalStateException actual = assertThrows(IllegalStateException.class, () -> sessionManager.createSession("session-1"));
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
+        IllegalStateException actual = assertThrows(IllegalStateException.class, () -> sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of())));
         assertThat(actual.getMessage(), is("Session already exists."));
     }
     
     @Test
     void assertHasSession() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
         assertTrue(sessionManager.hasSession("session-1"));
     }
     
     @Test
     void assertCloseSession() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
         assertTrue(sessionManager.hasSession("session-1"));
         sessionManager.closeSession("session-1");
         assertFalse(sessionManager.hasSession("session-1"));
@@ -77,7 +77,7 @@ class MCPSessionManagerTest {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
         List<String> actualClosedSessions = new LinkedList<>();
         sessionManager.addSessionCloseListener(actualClosedSessions::add);
-        sessionManager.createSession("session-1");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
         sessionManager.closeSession("session-1");
         assertThat(actualClosedSessions, is(List.of("session-1")));
     }
@@ -85,10 +85,10 @@ class MCPSessionManagerTest {
     @Test
     void assertCloseListenerCompletesBeforeSessionCanBeRecreated() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
-        sessionManager.addSessionCloseListener(sessionId -> assertThrows(IllegalStateException.class, () -> sessionManager.createSession(sessionId)));
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
+        sessionManager.addSessionCloseListener(sessionId -> assertThrows(IllegalStateException.class, () -> sessionManager.createSession(new MCPSessionIdentity(sessionId, "", "", Map.of()))));
         sessionManager.closeSession("session-1");
-        assertDoesNotThrow(() -> sessionManager.createSession("session-1"));
+        assertDoesNotThrow(() -> sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of())));
     }
     
     @Test
@@ -97,7 +97,7 @@ class MCPSessionManagerTest {
         RuntimeDatabaseConfiguration runtimeDatabaseConfig = mock(RuntimeDatabaseConfiguration.class);
         when(runtimeDatabaseConfig.openConnection("logic_db")).thenReturn(connection);
         MCPSessionManager sessionManager = new MCPSessionManager(Map.of("logic_db", runtimeDatabaseConfig));
-        sessionManager.createSession("session-1");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
         sessionManager.getTransactionResourceManager().beginTransaction("session-1", "logic_db");
         sessionManager.closeSession("session-1");
         verify(connection).rollback();
@@ -112,7 +112,7 @@ class MCPSessionManagerTest {
         RuntimeDatabaseConfiguration runtimeDatabaseConfig = mock(RuntimeDatabaseConfiguration.class);
         when(runtimeDatabaseConfig.openConnection("logic_db")).thenReturn(connection);
         MCPSessionManager sessionManager = new MCPSessionManager(Map.of("logic_db", runtimeDatabaseConfig));
-        sessionManager.createSession("session-1");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
         sessionManager.getTransactionResourceManager().beginTransaction("session-1", "logic_db");
         doThrow(new SQLException("cleanup failed")).when(connection).rollback();
         assertDoesNotThrow(() -> sessionManager.closeSession("session-1"));
@@ -129,8 +129,8 @@ class MCPSessionManagerTest {
         RuntimeDatabaseConfiguration runtimeDatabaseConfig = mock(RuntimeDatabaseConfiguration.class);
         when(runtimeDatabaseConfig.openConnection("logic_db")).thenReturn(firstConnection, secondConnection);
         MCPSessionManager sessionManager = new MCPSessionManager(Map.of("logic_db", runtimeDatabaseConfig));
-        sessionManager.createSession("session-1");
-        sessionManager.createSession("session-2");
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "", "", Map.of()));
+        sessionManager.createSession(new MCPSessionIdentity("session-2", "", "", Map.of()));
         sessionManager.getTransactionResourceManager().beginTransaction("session-1", "logic_db");
         sessionManager.getTransactionResourceManager().beginTransaction("session-2", "logic_db");
         new MCPSessionExecutionCoordinator(sessionManager).closeAllSessions();
@@ -145,29 +145,30 @@ class MCPSessionManagerTest {
     }
     
     @Test
-    void assertBindSessionIdentity() {
+    void assertFindSessionIdentity() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        MCPSessionIdentity sessionIdentity = new MCPSessionIdentity("subject", "gateway", Map.of("region", "ap-south"));
-        sessionManager.createSession("session-1");
-        assertDoesNotThrow(() -> sessionManager.bindSessionIdentity("session-1", sessionIdentity));
+        MCPSessionIdentity sessionIdentity = new MCPSessionIdentity("session-1", "subject", "gateway", Map.of("region", "ap-south"));
+        sessionManager.createSession(sessionIdentity);
         assertThat(sessionManager.findSessionIdentity("session-1"), is(Optional.of(sessionIdentity)));
     }
     
     @Test
-    void assertBindSessionIdentityWithDifferentBinding() {
+    void assertGetRequiredSessionIdentity() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
-        sessionManager.bindSessionIdentity("session-1", new MCPSessionIdentity("subject", "gateway", Map.of()));
-        IllegalStateException actual = assertThrows(IllegalStateException.class,
-                () -> sessionManager.bindSessionIdentity("session-1", new MCPSessionIdentity("other", "gateway", Map.of())));
-        assertThat(actual.getMessage(), is("Session identity does not match existing binding for session `session-1`."));
+        MCPSessionIdentity sessionIdentity = new MCPSessionIdentity("session-1", "subject", "gateway", Map.of("region", "ap-south"));
+        sessionManager.createSession(sessionIdentity);
+        assertThat(sessionManager.getRequiredSessionIdentity("session-1"), is(sessionIdentity));
+    }
+    
+    @Test
+    void assertGetRequiredSessionIdentityWithMissingSession() {
+        assertThrows(MCPSessionNotExistedException.class, () -> new MCPSessionManager(Collections.emptyMap()).getRequiredSessionIdentity("session-1"));
     }
     
     @Test
     void assertCloseSessionRemovesSessionIdentity() {
         MCPSessionManager sessionManager = new MCPSessionManager(Collections.emptyMap());
-        sessionManager.createSession("session-1");
-        sessionManager.bindSessionIdentity("session-1", new MCPSessionIdentity("subject", "gateway", Map.of()));
+        sessionManager.createSession(new MCPSessionIdentity("session-1", "subject", "gateway", Map.of()));
         sessionManager.closeSession("session-1");
         assertThat(sessionManager.findSessionIdentity("session-1"), is(Optional.empty()));
     }
